<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="400dp"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="4" >

    <LinearLayout
        android:id="@+id/lnDayViewChangeDialog"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/round_top_shape"
        android:clickable="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivDayViewChange"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/ic_day_view_selector"
                android:scaleType="fitCenter"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/DayName"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#ABABAA" />

    <LinearLayout
        android:id="@+id/lnWeekViewChangeDialog"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/middle_shape"
        android:clickable="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/ivWeekViewChange"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/ic_week_view_selector"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/WeekName"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#ABABAA" />

    <LinearLayout
        android:id="@+id/lnMonthViewChangeDialog"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/round_bottom_shape"
        android:clickable="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/ivMonthViewChange"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/ic_month_view_selector"
                android:scaleType="fitCenter"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/MonthName"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>